--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.9.1"
   }
 }
