--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-datetimepicker": "^0.0.22",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.8.1",
