--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js",
+    "start": "node index.js",
     "bothServers": "concurrently \"nodemon index.js\" \"cd ../client && npm start\""
   },
   "type": "module",
